# Futag

./: .clang-format  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Futag-introspector.md  How-to-work-with-Futag.md  IMPLEMENTATION-LOCAL-LLM.md  IMPLEMENTATION-SUMMARY.md  Project-summary.md  README.en.md  README.md  References-of-languages.md  References.md  build.bash  build.sh  futag-work.mmd  Играть-с-Futag.md  Краткое-руководство-по-использованию-Futag.md
build-llvm/: build-debug.sh  build.sh  buildwAFLplusplusFuzzIntro.sh  buildwFuzzIntro.sh  sed_cmdsMacM.sh
custom-llvm/: build-debug.sh  build-w-fuzz-introspector.sh  build.sh  buildAFLplusplus.sh  buildMacM.sh  buildwAFLplusplus.sh  buildwAFLplusplusFuzzIntro.sh  buildwFuzzIntro.sh  clang-tools-extra-11.1.0.src.tar.xz  compiler-rt-11.1.0.src.tar.xz  compiler-rt-14.0.6.src.tar.xz  export.sh  fuzz-introspector.tar.xz  prepare.sh  prepare14.sh
docs/: LLM-GENERATION.md  LLM-GENERATION.ru.md  LOCAL-LLM-SUPPORT.md  QUICKSTART-LLM.md  analysis-backend.md  analysis-schema.json  architecture.md  checkers.md  generators.md  (+4 more)
src/Slicer/FutagSlicer/: CMakeLists.txt  FutagSlicer.cpp  pdg.cpp  pdgBuilder.cpp  pdgBuilderAction.cpp
src/futag/: CMakeLists.txt  Gen4Crusher.cpp  Gen4libFuzzer.cpp
src/python/futag-package/: README.md  param_hints.json  requirements.txt  setup.cfg  setup.py
src/python/futag-package/src/futag/: __init__.py  base_generator.py  blob_stamper_generator.py  compiler.py  context_generator.py  fdp_generator.py  fuzzer.py  generator.py  generator_state.py  llm_generator.py  natch_generator.py  preprocessor.py  sysmsg.py  wrapper.py
src/python/futag-package/src/futag.egg-info/: PKG-INFO  SOURCES.txt
src/python/futag-package/tests/: test_fdp_generator.py  test_fuzzer.py
(+208 files in other folders)
