[metadata]
name = futag
version = 2.0.1
author = Futag-team of ISP RAS
author_email = thientcgithub@gmail.com
description = Python package of Futag
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ispras/Futag/tree/main/src/python/futag-package
project_urls =
    Bug Tracker = https://github.com/ispras/Futag/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
